# RoadGISPro

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RoadGISPro.py  pyproject.toml
.github/workflows/: desktop-builds.yml  nightly.yml
installer/: README.md
installer/linux-pyinstaller/: README.md  build_app.sh
installer/macos-pyinstaller/: README.md  build_app.sh
installer/windows-exe/: README.md  RoadGISPro.iss  build_exe.ps1  prepare_payload.ps1
polyglot/: README.md  runtime_config.example.json
polyglot/csharp/: Program.cs
polyglot/go/: metrics.go
polyglot/java/: MetricsEngine.java
polyglot/js/: metrics.js
polyglot/plugins/go_network_health/: plugin.go
polyglot/plugins/manifests/: go_network_health.json  rust_surface_audit.json
polyglot/plugins/rust_surface_audit/: Cargo.toml
polyglot/plugins/rust_surface_audit/src/: main.rs
polyglot/ruby/: metrics.rb
polyglot/rust_router/: Cargo.toml
polyglot/rust_router/src/: main.rs
polyglot/setup/: setup_languages.ps1  setup_languages.py  setup_languages.sh
polyglot/validators/go_validator/: validator.go
polyglot/validators/rust_validator/: Cargo.toml
polyglot/validators/rust_validator/src/: main.rs
roadgis_support/: __init__.py  audit.py  osm_cache.py  platforms.py  ursina_bridge.py
